--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 </address>
             </div>
             <div class="footer-links">
-                <p class="footer-links-text">присоединяйтесь</p>
+                <p class="footer-subtitle">присоединяйтесь</p>
                 <ul class="footer-social-list list">
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link link">
@@ -418,6 +418,16 @@
                     </li>
                 </ul>
             </div>
+            <form class="footer-form" action="#">
+                <p class="footer-subtitle">Подпишитесь на рассылку</p>
+                <div class="footer-mailing-wrap">
+                    <input type="email" class="footer-mailing-field" name="mailing" placeholder="E-mail" required>
+                    <button type="submit" class="footer-mailing-btn"><span
+                            class="footer-btn-text">Подписаться</span><svg class="footer-mailing-icon">
+                            <use href="./img/icons.svg#icon-send"></use>
+                        </svg></button>
+                </div>
+            </form>
         </div>
     </footer>
 
