--- a/index.html
+++ b/index.html
@@ -60,43 +60,45 @@
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal-window">
                     <p class="modal-window-title">Оставьте свои данные, мы вам перезвоним</p>
-                    <!-- <button class="modal-send-btn" type="button">Отправить</button> -->
                     <button class="modal-close-btn" type="button" data-modal-close>
                         <svg class="close-icon" width="11" height="11">
                             <use href="./img/icons.svg#icon-close"></use>
                         </svg>
                     </button>
                     <form action="#" class="modal-form">
-                        <label class="modal-form-field">
+                        <label class="modal-form-label">
                             Имя
                             <span class="modal-input-wrapper">
                                 <input type="text" class="modal-input" name="user-name" required autofocus
                                     minlength="2">
-                                <svg class="icon-name" width="12" height="12">
-                                    <use href="./img/icons.svg#icon-name"></use>
-                                </svg>
+                                <span class="input-icon-wrap"><svg class="icon-name" width="12" height="12">
+                                        <use href="./img/icons.svg#icon-name"></use>
+                                    </svg></span>
                             </span>
                         </label>
-                        <label class="modal-form-field">
+                        <label class="modal-form-label">
                             Телефон
                             <span class="modal-input-wrapper">
                                 <input type="tel" class="modal-input" name="user-tel" required>
-                                <svg class="icon-tel" width="13" height="13">
-                                    <use href="./img/icons.svg#icon-tel"></use>
-                                </svg>
+                                <span class="input-icon-wrap"><svg class="icon-tel" width="13" height="13">
+                                        <use href="./img/icons.svg#icon-tel"></use>
+                                    </svg></span>
                             </span>
                         </label>
-                        <label class="modal-form-field">
-                            Комментарий
+                        <label class="modal-form-label">
+                            Почта
                             <span class="modal-input-wrapper">
                                 <input type="email" class="modal-input" name="user-email">
-                                <svg class="icon-email" width="15" height="12">
-                                    <use href="./img/icons.svg#icon-email"></use>
-                                </svg>
+                                <span class="input-icon-wrap"><svg class="icon-email" width="15" height="12">
+                                        <use href="./img/icons.svg#icon-email"></use>
+                                    </svg></span>
                             </span>
                         </label>
-                        <textarea name="modal-user-coment" class="modal-user-coment"
-                            placeholder="Введите текст"></textarea>
+                        <label class="modal-form-label">
+                            Комментарий
+                            <textarea name="modal-user-coment" class="modal-user-coment"
+                                placeholder="Введите текст"></textarea>
+                        </label>
                         <label for="accept-policy" class="modal-checkbox-lable">
                             Соглашаюсь с рассылкой и принимаю &nbsp
                             <a href="#" class="policy-link link">Условия договора</a>
