--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <label class="modal-form-label">
                             Имя
                             <span class="modal-input-wrapper">
-                                <input type="text" class="modal-input" name="user-name" required autofocus
-                                    minlength="2">
-                                <span class="input-icon-wrap"><svg class="icon-name" width="12" height="12">
+                                <input type="text" class="modal-input" name="user-name" required autofocus minlength="2"
+                                    pattern="[a-zA-Zа-яёА-ЯЁ]+" title="Имя должно содержать только буквы">
+                                <span class="input-icon-wrap"><svg class="icon-name modal-icon" width="12" height="12">
                                         <use href="./img/icons.svg#icon-name"></use>
                                     </svg></span>
                             </span>
@@ -79,8 +79,9 @@
                         <label class="modal-form-label">
                             Телефон
                             <span class="modal-input-wrapper">
-                                <input type="tel" class="modal-input" name="user-tel" required>
-                                <span class="input-icon-wrap"><svg class="icon-tel" width="13" height="13">
+                                <input type="tel" class="modal-input" name="user-tel" required
+                                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-123-45-67">
+                                <span class="input-icon-wrap"><svg class="icon-tel modal-icon" width="13" height="13">
                                         <use href="./img/icons.svg#icon-tel"></use>
                                     </svg></span>
                             </span>
@@ -89,7 +90,7 @@
                             Почта
                             <span class="modal-input-wrapper">
                                 <input type="email" class="modal-input" name="user-email">
-                                <span class="input-icon-wrap"><svg class="icon-email" width="15" height="12">
+                                <span class="input-icon-wrap"><svg class="icon-email modal-icon" width="15" height="12">
                                         <use href="./img/icons.svg#icon-email"></use>
                                     </svg></span>
                             </span>
@@ -105,9 +106,7 @@
                         </label>
                         <input class="modal-checkbox" type="checkbox" id="accept-policy" required>
 
-                        <button class="modal-form-submit" type="submit">Отправить</button>
-
-
+                        <button class="modal-form-submit modal-btn" type="submit">Отправить</button>
                     </form>
                 </div>
             </div> -->
