--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Svitlana Lozovenko">
-    <meta name="description" content="GoIT-training. Homework 5. Page 2 of 2">
+    <meta name="description" content="GoIT-training. Homework 6. Page 2 of 2">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
@@ -257,7 +257,9 @@
             <form class="footer-form" action="#">
                 <p class="footer-subtitle">Подпишитесь на рассылку</p>
                 <div class="footer-mailing-wrap">
-                    <input type="email" class="footer-mailing-field" name="mailing" placeholder="E-mail" required>
+                    <label class="footer-mailing-label">
+                        <input type="email" class="footer-mailing-field" name="mailing" placeholder="E-mail" required>
+                    </label>
                     <button type="submit" class="footer-mailing-btn"><span
                             class="footer-btn-text">Подписаться</span><svg class="footer-mailing-icon">
                             <use href="./img/icons.svg#icon-send"></use>
