--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <use href="./img/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a>
-            <a class="header-contacts link" href="tel:++380961111111">
+            <a class="header-contacts link" href="tel:+380961111111">
                 <svg class="header-icon" width="10" height="16">
                     <use href="./img/icons.svg#icon-smartphone"></use>
                 </svg>
