--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <button class="modal-form-submit modal-btn" type="submit">Отправить</button>
                     </form>
                 </div>
-            </div> -->
+            </div>
         </section>
 
 
